Updated for new D3 version, revised carbon calcs

--- a/timeuse/style.css
+++ b/timeuse/style.css
@@ -5,7 +5,7 @@
 		padding: 0;
 		border: 0;
 		font-size: 100%;
-		font: inherit;
+		font-family: styrene-medium, Arial;
 		vertical-align: baseline; }
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 		display: block; }
